ApplicationGateway/azuredeploy.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "projectName": {
            "type": "string",
            "metadata": {
                "description": "Specifies a project name that is used for generating resource names."
            }
        },
        "location": {
            "type": "string",
            "allowedValues": [
                "centralus",
                "eastus",
                "eastus2",
                "westus2",
                "francecentral",
                "northeurope",
                "uksouth",
                "westeurope",
                "japaneast",
                "southeastasia"
            ],
            "metadata": {
                "description": "Specifies the location for all of the resources created by this template. Availability zones are only supported in certain regions.  For the last supported zones, see https://docs.microsoft.com/en-us/azure/availability-zones/az-overview#services-support-by-region."
            }
        },
        "adminUsername": {
            "type": "string",
            "metadata": {
                "description": "Specifies the virtual machine administrator username."
            }
        },
        "adminPassword": {
            "type": "securestring",
            "metadata": {
                "description": "Specifies the virtual machine administrator password."
            }
        }
    },
    "variables": {
        "ipAddressSKU": "Basic",
        "nsgName": "[concat(parameters('projectName'),'-nsg')]",
        "vNetName": "vehicleAppVnet",
        "vNetAddressPrefix": "10.0.0.0/16",
        "vNetSubnetName": "webServerSubnet",
        "vNetSubnetAddressPrefix": "10.0.1.0/24",
        "vmSize": "Standard_DS1_v2",
        "vmStorageAccountType": "Standard_LRS",
        "numberOfInstances": 2,
        "extensionsFileURI": ["https://raw.githubusercontent.com/MicrosoftDocs/mslearn-load-balance-web-traffic-with-application-gateway/master/scripts/vmconfig.sh"]
    },
    "resources": [
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2018-12-01",
            "name": "[variables('nsgName')]",
            "location": "[parameters('location')]",
            "properties": {
                "securityRules": [
                    {
                        "name": "AllowHTTPInbound",
                        "properties": {
                            "protocol": "*",
                            "sourcePortRange": "*",
                            "destinationPortRange": "80",
                            "sourceAddressPrefix": "Internet",
                            "destinationAddressPrefix": "*",
                            "access": "Allow",
                            "priority": 100,
                            "direction": "Inbound"
                        }
                    },
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "protocol": "TCP",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourceAddressPrefix": "*",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*",
                            "destinationPortRange": "3389"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2018-12-01",
            "name": "[variables('vNetName')]",
            "location": "[parameters('location')]",
            "properties": {
                "addressSpace": {
                    "addressPrefixes": [
                        "[variables('vNetAddressPrefix')]"
                    ]
                },
                "subnets": [
                    {
                        "name": "[variables('vNetSubnetName')]",
                        "properties": {
                            "addressPrefix": "[variables('vNetSubnetAddressPrefix')]"
                        }
                    }
                ]
            }
        },
        {
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "2018-10-01",
            "name": "[concat(parameters('projectName'),'-vm', copyIndex(1))]",
            "location": "[parameters('location')]",
            "copy": {
                "name": "vmCopy",
                "count": "[variables('numberOfInstances')]"
            },
            "dependsOn": [
                "networkInterfaceCopy"
            ],
            "properties": {
                "hardwareProfile": {
                    "vmSize": "[variables('vmSize')]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "MicrosoftWindowsServer",
                        "offer": "WindowsServer",
                        "sku": "2019-Datacenter",
                        "version": "latest"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "[variables('vmStorageAccountType')]"
                        }
                    }
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', concat(parameters('projectName'),'-vm', copyIndex(1), '-networkInterface'))]"
                        }
                    ]
                },
                "osProfile": {
                    "computerName": "[concat('webServer', copyIndex(1))]",
                    "adminUsername": "[parameters('adminUsername')]",
                    "adminPassword": "[parameters('adminPassword')]",
                    "windowsConfiguration": {
                        "enableAutomaticUpdates": true,
                        "provisionVmAgent": true
                    }
                }
            },
            "resources": [
                {
                    "type": "extensions",
                    "name": "apache-ext",
                    "apiVersion": "2018-10-01",
                    "location": "westus",
                    "properties": {
                        "publisher": "Microsoft.Azure.Extensions",
                        "type": "CustomScript",
                        "typeHandlerVersion": "2.0",
                        "autoUpgradeMinorVersion": true,
                        "settings": {
                            "skipDos2Unix": true
                        },
                        "protectedSettings": {
                            "commandToExecute": "sh vmconfig.sh westus",
                            "fileUris": [
                                "[variables('extensionsFileURI')]"
                            ]
                        }
                    },
                    "dependsOn": [
                        "[variables('vNetName')]",
                        "[concat(parameters('projectName'),'-vm', copyIndex(1))]"
                    ]
                }
            ]
        },
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2018-12-01",
            "name": "[concat(parameters('projectName'),'-vm', copyIndex(1), '-publicIp')]",
            "location": "[parameters('location')]",
            "sku": {
                "name": "[variables('ipAddressSKU')]"
            },
            "copy": {
                "name": "publicIPAddressCopy",
                "count": "[variables('numberOfInstances')]"
            },
            "properties": {
                "publicIPAddressVersion": "IPv4",
                "publicIPAllocationMethod": "Static"
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2018-12-01",
            "name": "[concat(parameters('projectName'),'-vm', copyIndex(1), '-networkInterface')]",
            "location": "[parameters('location')]",
            "copy": {
                "name": "networkInterfaceCopy",
                "count": "[variables('numberOfInstances')]"
            },
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks/', variables('vNetName'))]",
                "[resourceId('Microsoft.Network/networkSecurityGroups/', variables('nsgName'))]",
                "publicIPAddressCopy"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "privateIPAllocationMethod": "Dynamic",
                            "subnet": {
                                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', variables('vNetName'), variables('vNetSubnetName'))]"
                            },
                            "publicIpAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', concat(parameters('projectName'),'-vm', copyIndex(1), '-publicIp'))]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', variables('nsgName'))]"
                }
            }
        }
    ],
    "outputs": {
    }
}
